# coutils

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  all_completed.cpp  async_fn.cpp  async_generator.cpp  fibonacci.cpp  generator.cpp  multi_await.cpp  tuple_init.cpp
include/: coutils.hpp
include/coutils/: agent.hpp  all_completed.hpp  async_fn.hpp  async_for.hpp  async_generator.hpp  awaitable_traits.hpp  common_promise.hpp  detached_fn.hpp  empty_slot.hpp  generator.hpp  initializer_tuple.hpp  macros.hpp  multi_await.hpp  sync_manip.hpp  task.hpp  traits.hpp  utility.hpp  value_wrapper.hpp  wait.hpp  zygote.hpp
include/coutils/crt/: agent.hpp  async_fn.hpp  async_generator.hpp  generator.hpp  task.hpp  zygote.hpp
include/coutils/detail/: transfer_to_handle.hpp
