cmake_minimum_required(VERSION 3.5)

project(coutils)
add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_20)

add_custom_target(coutils_examples)
file(GLOB_RECURSE COUTILS_EXAMPLE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp)
foreach (EXAMPLE_SOURCE ${COUTILS_EXAMPLE_SOURCES})
    get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
    set(EXAMPLE_NAME coutils_example_${EXAMPLE_NAME})
    add_executable(${EXAMPLE_NAME} EXCLUDE_FROM_ALL ${EXAMPLE_SOURCE})
    target_link_libraries(${EXAMPLE_NAME} coutils)
    add_dependencies(coutils_examples ${EXAMPLE_NAME})
endforeach ()
